--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4187,9 +4187,6 @@ details.collapse summary::-webkit-details-marker {
 .w-16 {
   width: 4rem;
 }
-.w-24 {
-  width: 6rem;
-}
 .w-28 {
   width: 7rem;
 }
@@ -4235,9 +4232,6 @@ details.collapse summary::-webkit-details-marker {
 .w-\[161px\] {
   width: 161px;
 }
-.w-\[165px\] {
-  width: 165px;
-}
 .w-\[170px\] {
   width: 170px;
 }
@@ -4258,6 +4252,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[25px\] {
   width: 25px;
+}
+.w-\[265px\] {
+  width: 265px;
 }
 .w-\[287px\] {
   width: 287px;
@@ -6138,6 +6135,14 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 @media not all and (min-width: 768px) {
+
+  .max-md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .max-md\:w-14 {
+    width: 3.5rem;
+  }
 
   .max-md\:scale-125 {
     --tw-scale-x: 1.25;
