--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4004,6 +4004,9 @@ details.collapse summary::-webkit-details-marker {
 .max-h-\[55px\] {
   max-height: 55px;
 }
+.max-h-\[600px\] {
+  max-height: 600px;
+}
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
